--- a/src/app/add-entry/add-entry.component.html
+++ b/src/app/add-entry/add-entry.component.html
@@ -1,3 +1,3 @@
 <textarea style="width: 100%;" [(ngModel)]="model.content"></textarea>
-<button class="btn btn-secondary cursor-pointer" (Click)="sharePublicly()">SHARE PUBLICLY</button>
-<button class="btn btn-secondary cursor-pointer" (Click)="shareForFriends()">SHARE ONLY FOR FRIENDS</button>
+<button class="btn btn-secondary cursor-pointer" (click)="sharePublicly()">SHARE PUBLICLY</button>
+<button class="btn btn-secondary cursor-pointer" (click)="shareForFriends()">SHARE ONLY FOR FRIENDS</button>
