--- a/src/app/social-feed/social-feed.component.html
+++ b/src/app/social-feed/social-feed.component.html
@@ -3,18 +3,20 @@
       <div class="row h-100">
           <div class="hero-background"></div>
           <div class="col-lg-8 offset-2 d-flex flex-column">
+              <!--
               <div class="row mt-4" *ngIf="currentUser">
                 <div class="col">
                   Logged in as: {{currentUser.fullName}}
                 </div>
-              </div>
+              </div> -->
               <div class="top-text-small">
                   <div class="logo-text">
                     SOCIAL FEED
                   </div>
               </div>
 
-              <app-add-entry [(onClick)]="addEntry()"></app-add-entry>
+              <!-- <app-add-entry [(onClick)]="addEntry()"></app-add-entry> -->
+              <app-add-entry [(onClick)]="addEntry"></app-add-entry>
 
               <mat-card class="social-feed-card mt-4">
                 <mat-card-header>
