Updated code in login.component.ts/social-feed.component.html/social-feed.component.ts

--- a/src/app/social-feed/social-feed.component.html
+++ b/src/app/social-feed/social-feed.component.html
@@ -3,12 +3,12 @@
       <div class="row h-100">
           <div class="hero-background"></div>
           <div class="col-lg-8 offset-2 d-flex flex-column">
-              <!--
+
               <div class="row mt-4" *ngIf="currentUser">
                 <div class="col">
                   Logged in as: {{currentUser.fullName}}
                 </div>
-              </div> -->
+              </div>
               <div class="top-text-small">
                   <div class="logo-text">
                     SOCIAL FEED
