Single-post Branch finished successfully |Added  Moment Package/DEV_NOTES.1.txt

--- a/src/app/add-entry/add-entry.component.html
+++ b/src/app/add-entry/add-entry.component.html
@@ -1,3 +1,7 @@
 <textarea style="width: 100%;" [(ngModel)]="model.content"></textarea>
+<button mat-button (click)="onClick(model)">POST</button>
+
+<!--
 <button class="btn btn-secondary cursor-pointer" (click)="sharePublicly()">SHARE PUBLICLY</button>
 <button class="btn btn-secondary cursor-pointer" (click)="shareForFriends()">SHARE ONLY FOR FRIENDS</button>
+-->
