--- a/src/app/social-feed/social-feed.component.html
+++ b/src/app/social-feed/social-feed.component.html
@@ -17,21 +17,7 @@
 
               <!-- <app-add-entry [(onClick)]="addEntry()"></app-add-entry> -->
               <app-add-entry [(onClick)]="addEntry"></app-add-entry>
-
-              <mat-card class="social-feed-card mt-4" *ngFor="let post of posts">
-                <mat-card-header>
-                  <div mat-card-avatar class="social-feed-avatar">
-                    <mat-icon>face</mat-icon>
-                  </div>
-                  <mat-card-title>{{ post.authorId }}</mat-card-title>
-                  <mat-card-subtitle>{{ post.createdAt }}</mat-card-subtitle>
-                </mat-card-header>
-                <mat-card-content>
-                  <p>
-                  {{ post.content }}
-                  </p>
-                </mat-card-content>
-              </mat-card>
+              <app-single-post *ngFor="let post of posts" [post]="post" ></app-single-post>
           </div>
       </div>
   </div>
