--- a/src/app/add-entry/add-entry.component.html
+++ b/src/app/add-entry/add-entry.component.html
@@ -1,7 +1,5 @@
 <textarea style="width: 100%;" [(ngModel)]="model.content"></textarea>
-<button mat-button (click)="onClick(model)">POST</button>
 
-<!--
-<button class="btn btn-secondary cursor-pointer" (click)="sharePublicly()">SHARE PUBLICLY</button>
+<button class="btn btn-secondary cursor-pointer" (click)="sharePublicly()">SHARE PUBLICLY</button>&nbsp;
 <button class="btn btn-secondary cursor-pointer" (click)="shareForFriends()">SHARE ONLY FOR FRIENDS</button>
--->
+
