Added Dev_Notes6 | Modified: User.ts/sockets/users.service/users-friends/styles.scss/ index.hmtl

--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -38,6 +38,9 @@
 // @import "node_modules/bootstrap/scss/carousel";
 @import "node_modules/bootstrap/scss/utilities";
 
+// @import "node_modules/toastr/toastr";
+// @import "toastr";
+
 @import "material-theme";
 
 @import "common";
